2010-06-28  Vladimir Serbinenko  <phcoder@gmail.com>

	XEN with Linux grub-mkconfig support.

	* conf/common.rmk (grub-mkconfig_SCRIPTS) [linux]: Add 20_linux_xen.
	* util/grub-mkconfig.in: Export GRUB_CMDLINE_XEN and
	GRUB_CMDLINE_XEN_DEFAULT.
	* util/grub.d/20_linux_xen.in: New file.

2010-06-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Initialise VGA video on qemu ourselves.

	* boot/i386/qemu/boot.S: Don't call 0xc000.
	* conf/i386-qemu.rmk (kern/i386/qemu/init.c_DEPENDENCIES): New variable.
	(kernel_img_SOURCES): Add kern/i386/qemu/init.c and bus/pci.c.
	(kernel_img_HEADERS): Add pci.h.
	* conf/i386.rmk (pkglib_MODULES) [qemu]: Remove pci.mod.
	* configure.ac: Force unifont on qemu and yeeloong.
	* include/grub/i386/qemu/kernel.h (grub_qemu_init_cirrus): New proto.
	(grub_vga_palette_write): Use correct register.
	* kern/i386/coreboot/init.c (grub_machine_init) [GRUB_MACHINE_QEMU]:
	Call grub_qemu_init_cirrus.
	* kern/i386/qemu/init.c: New file.
	* term/i386/pc/vga_text.c (inc_y): Never read outside the screen.

	* commands/videotest.c (grub_cmd_videotest): Handle double buffering.

2010-06-26  Pavel Roskin  <proski@gnu.org>

	* util/grub.d/10_linux.in: Add support for initrd images on Fedora
	13.

2010-06-26  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Simple configuration): Explain that
	GRUB_DISABLE_LINUX_RECOVERY and GRUB_DISABLE_NETBSD_RECOVERY must be
	set to `true' to disable their respective recovery entries, not
	merely set.

2010-06-26  Colin Watson  <cjwatson@ubuntu.com>

	Make the `source' command slightly faster.

	* normal/main.c (grub_normal_execute): Don't re-read list files when
	nested.

2010-06-23  Colin Watson  <cjwatson@ubuntu.com>

	* loader/i386/multiboot_mbi.c (retrieve_video_parameters): Set red
	field position and mask size to red fields from mode_info, not
	green.
	* loader/multiboot_mbi2.c (retrieve_video_parameters): Likewise.
	Remove redundant tag->common.framebuffer_type assignment.
	Reported by: Seth Goldberg.
